--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -17,7 +17,7 @@
 \setlength{\hintscolumnwidth}{3cm}
 
 % personal data
-\name{Julia}{Semenova}
+\name{Julia}{Yakovleva}
 % \title{Control systems developer}
 \address{}{Moscow}{Russian Federation}
 \phone[mobile]{+7~(916)~941~08~88}
