--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -17,7 +17,7 @@
 \setlength{\hintscolumnwidth}{3cm}
 
 % personal data
-\name{Julia}{Yakovleva}
+\name{Yulia}{Yakovleva}
 % \title{Control systems developer}
 \address{}{Moscow}{Russian Federation}
 \phone[mobile]{+7~(916)~941~08~88}
@@ -27,15 +27,28 @@
 \begin{document}
 \makecvtitle
 
-\section{Skills}
-\subsection{Main:}
-\cvitem{}{C++, Python (Jupyter, NumPy, Sklearn), Matlab/Simulink, SciLab, VisSim, Git, ROS, Dynamic systems math 
-modelling}
-\subsection{Experience with:}
-\cvitem{}{Bash, C, Linux, OpenCV, \LaTeX, JS (Underscore.JS, Backbone.JS), MongoDB, Django, Machine Learning }
-
 \section{Experience}
 % \subsection{Vocational}
+
+\cventry{October~2015 -- Now}{Researcher-developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
+\begin{itemize}%
+\item Self-driving car positioning and control software development:
+  \begin{itemize}%
+  \item System launch tool to replace ROSLaunch (Python, ROS);
+  \item Local positioning system (C++, Kalman filters);
+  \item Trajectory control system (C++, ROS);
+  \item Developers' web-interface (Python, JS, ROS);
+  \item Road markup-relied localization system (C++, ROS).
+  \item Field testing;
+  \end{itemize}
+\item Initiative works in deep learning for robotics control (just for fun).
+\end{itemize}}
+
+\cventry{June~2015 -- October~2015}{Junior web-developer}{WETA Group}{Remote}{}{
+Full-stack web-development
+\begin{itemize}%
+\item Security system web-interface development: Two web-application were developed using Django non-rel backend and JS + Backbone.JS + Marionette.JS + Raphaël.JS frontend with MongoDB database;
+\end{itemize}}
 
 \cventry{July~2013 -- June~2015}{Control systems developer}{Modern Signal Processing and Contol Technologies R\&D Laboratory}{Chelyabinsk}{}{
 Control systems development.
@@ -62,18 +75,6 @@ Control systems development.
 \cventry{January~2012 -- June~2015}{Laboratory assistant}{South Ural State
  University}{Chelyabinsk}{}{Participated in research works.}
 
-\cventry{June~2015 -- October~2015}{Junior web-developer}{WETA Group}{Remote}{}{
-Full-stack web-development
-\begin{itemize}%
-\item Security system web-interface development: Two web-application were developed using Django non-rel backend and JS + Backbone.JS + Marionette.JS + Raphaël.JS frontend with MongoDB database;
-\end{itemize}}
-
-\cventry{October~2015 -- Now}{Junior research fellow}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
-\begin{itemize}%
-\item Autonomus robot navigation and control software development (C++, ROS, Python);
-\item Initiative works in deep learning for robotics control.
-\end{itemize}}
-
 \section{Education}
 \cvitem{2010--2015}{
   \textbf{National Research South Ural State University}; \newline
@@ -93,12 +94,18 @@ Full-stack web-development
 \cvitemwithcomment{Russian}{Native speaker}{}
 \cvitemwithcomment{English}{Intermediate}{}
 \cvitemwithcomment{German}{Beginner}{}
+\cvitemwithcomment{Polish}{Beginner}{}
+
+\section{Skills}
+\subsection{Main:}
+\cvitem{}{C++, Python (Jupyter, NumPy, Sklearn), Matlab/Simulink, SciLab, VisSim, Git, ROS, Dynamic systems math 
+modelling}
+\subsection{Experience with:}
+\cvitem{}{Bash, C, Linux, OpenCV, \LaTeX, JS (Underscore.JS, Backbone.JS), MongoDB, Django, Machine Learning }
+
 
 \section{Miscellaneous}
 \subsection{Interests}
 \cvitem{}{RC airplanes and quadrotors, skiing, bicycling.}
 
 \end{document}
-
-
-%% end of file `template.tex'.
