--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -20,8 +20,8 @@
 \name{Yulia}{Yakovleva}
 % \title{Control systems developer}
 \address{}{Moscow}{Russian Federation}
-% \email{redslowj@gmail.com}
 \email{robolamp@ya.ru}
+\email{redslowj@gmail.com}
 \social[github]{robolamp}
 
 \begin{document}
@@ -30,7 +30,7 @@
 \section{Experience}
 % \subsection{Vocational}
 
-\cventry{October~2015 -- August~2017}{Robotics researcher/developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
+\cventry{October~2015 -- October~2017}{Robotics researcher/developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
 \begin{itemize}%
 \item Self-driving car positioning and control software development:
   \begin{itemize}%
@@ -102,10 +102,10 @@ Control systems development.
 
 \section{Skills}
 \subsection{Main:}
-\cvitem{}{C++ (Eigen, Boost), Python (Jupyter, NumPy, Sklearn, Paramiko), Matlab/Simulink, SciLab, VisSim, Git, ROS, Linux, \LaTeX, Dynamic systems math
+\cvitem{}{C++ (Eigen, Boost), Python (Jupyter, NumPy, Sklearn, Paramiko), Matlab/Simulink, Git, ROS, Linux, Dynamic systems math
 modelling.}
 \subsection{Experience with:}
-\cvitem{}{Bash, C, OpenCV, JS (Underscore.JS, Backbone.JS, Leaflet.JS), MongoDB, Django, Machine Learning, Computer Vision. }
+\cvitem{}{Bash, C, OpenCV, JS (Underscore.JS, Backbone.JS, Leaflet.JS), MongoDB, Django, Machine Learning, Computer Vision, Docker, \LaTeX, SciLab, VisSim. }
 
 
 \section{Miscellaneous}
