--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -22,6 +22,7 @@
 \address{}{Moscow}{Russian Federation}
 \email{robolamp@ya.ru}
 \email{redslowj@gmail.com}
+\homepage{kotobank.ch/~robolamp/}
 \social[github]{robolamp}
 
 \begin{document}
@@ -31,9 +32,9 @@
 % \subsection{Vocational}
 
 \cventry{October~2015 -- October~2017}{Robotics researcher/developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
-\begin{itemize}%
-\item Self-driving car positioning and control software development:
-  \begin{itemize}%
+\begin{itemize}
+\item Self-driving car positioning and control software:
+  \begin{itemize}
   \item System launch tool to replace ROSLaunch (Python, ROS, Paramiko):
     Just a more flexible tool than ROSLaunch.
   \item Local positioning system (C++, Eigen, Kalman filters):
@@ -50,21 +51,21 @@
 
 \cventry{June~2015 -- October~2015}{Junior web-developer}{WETA Group}{Remote}{}{
 Full-stack web-development
-\begin{itemize}%
+\begin{itemize}
 \item Security system web-interface development: Two web-application were developed using Django non-rel backend and JS + Backbone.JS + Marionette.JS + Raphaël.JS frontend with MongoDB database;
 \end{itemize}}
 
 \cventry{July~2013 -- June~2015}{Control systems developer}{Modern Signal Processing and Contol Technologies R\&D Laboratory}{Chelyabinsk}{}{
 Control systems development.
-\begin{itemize}%
-\item Turboshaft control system development:
-  \begin{itemize}%
+\begin{itemize}
+\item Turboshaft control system:
+  \begin{itemize}
   \item Turboshaft math modelling using MATLAB/Simulink;
   \item Design, assembling and commissioning of turboshaft control system
   control cabinets;
   \end{itemize}
-\item Autonomous car trajectory control system development:
-  \begin{itemize}%
+\item Autonomous car trajectory control system:
+  \begin{itemize}
   \item Participated in car control system structure development;
   \item Control algorithms development and math modelling using MATLAB/Simulink
    and VisSim;
@@ -72,8 +73,8 @@ Control systems development.
   \item Car control system test bench software development using Python 2.7 with NumPy and UDP;
   \item Participated in commissioning, HIL and field tests;
   \end{itemize}
-\item UAV test bench software development: Scilab, interaction with National
- Instruments data acquisition system
+\item UAV test bench software: Scilab, interaction with National
+ Instruments data acquisition system.
 \end{itemize}}
 
 \cventry{January~2012 -- June~2015}{Laboratory assistant}{South Ural State
@@ -84,7 +85,7 @@ Control systems development.
   \textbf{National Research South Ural State University}; \newline
   Computer Technologies, Control and Radio Electronics Faculty; \newline
   Automation and Control Department; \newline
-  MEng, graduated with honours.
+  MEng with honours.
 }
 
 \cvitem{2015--2017}{
@@ -106,7 +107,6 @@ Control systems development.
 modelling.}
 \subsection{Experience with:}
 \cvitem{}{Bash, C, OpenCV, JS (Underscore.JS, Backbone.JS, Leaflet.JS), MongoDB, Django, Machine Learning, Computer Vision, Docker, \LaTeX, SciLab, VisSim. }
-
 
 \section{Miscellaneous}
 \subsection{Interests}
