Small experience update

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -38,12 +38,12 @@
   \item System launch tool to replace ROSLaunch (Python, ROS, Paramiko):
     Just a more flexible tool than ROSLaunch.
   \item Local positioning system (C++, Eigen, Kalman filters):
-    EKF and rollbacks/roll-ons to use measurements with various delays.
+    Extended Kalman filter and rollbacks/roll-ons to use measurements with various delays.
   \item Trajectory control system (C++, ROS);
   \item Developers' web-interface (Python, JS (Leaflet.JS, Bootstrap),  ROS):
-    Interactive tool allows to correct positioning and control route passing.
+    Interactive tool that allows to correct positioning and control route passing.
   \item Road markup-relied localization system (C++, ROS):
-    A system uses recognized road markup for more accurate positioning.
+    A system that uses recognized road markup and road features map for positioning.
   \item Field testing;
   \end{itemize}
 \item Initiative works in deep learning for robotics control (just for fun).
