Homepage URL fix

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -4,14 +4,14 @@
 \moderncvstyle{classic}
 \moderncvcolor{grey}
 
+\usepackage{url}
+
 % character encoding
 \usepackage[utf8]{inputenc}
 
 % adjust the page margins
 \usepackage[scale=0.75]{geometry}
 % \setlength{\hintscolumnwidth}{3cm}.
-
-% personal data
 
 \usepackage[scale=0.75]{geometry}
 \setlength{\hintscolumnwidth}{3cm}
@@ -20,10 +20,11 @@
 \name{Yulia}{Yakovleva}
 % \title{Control systems developer}
 \address{}{Moscow}{Russian Federation}
-\email{robolamp@ya.ru}
+% \email{robolamp@ya.ru}
 \email{redslowj@gmail.com}
-\homepage{kotobank.ch/~robolamp/}
 \social[github]{robolamp}
+\extrainfo{\url{kotobank.ch/~robolamp/}}
+
 
 \begin{document}
 \makecvtitle
