--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -18,10 +18,10 @@
 
 % personal data
 \name{Yulia}{Yakovleva}
-% \title{Control systems developer}
+\title{Robotics developer, researcher}
 \address{}{Moscow}{Russian Federation}
-% \email{robolamp@ya.ru}
-\email{redslowj@gmail.com}
+\email{robolamp@ya.ru}
+%\email{redslowj@gmail.com}
 \social[github]{robolamp}
 \extrainfo{\url{kotobank.ch/~robolamp/}}
 
