Update after discussion at PyLadies Kazan chat

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -18,7 +18,7 @@
 
 % personal data
 \name{Yulia}{Yakovleva}
-\title{Robotics developer, researcher}
+\title{Software developer}
 \address{}{Moscow}{Russian Federation}
 \email{robolamp@ya.ru}
 %\email{redslowj@gmail.com}
@@ -32,7 +32,20 @@
 \section{Experience}
 % \subsection{Vocational}
 
-\cventry{October~2015 -- October~2017}{Robotics researcher/developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
+\cventry{March~2018 -- Now}{Software engineer}{Yandex Self-Driving Car}{Moscow}{}{
+\begin{itemize}
+\item Self-driving car perception software:
+  \begin{itemize}
+  \item Sensors diagnostics (ROS, C++, Python, NumPy):
+    Simple data quality checking software modules for cameras and LiDARs.
+  \item Traffic lights detection (ROS, Python, NumPy, TensorFlow, Keras).
+    Traffic lights recognition and tracking pipeline; learning data mining and pre-processing; creating, training and deployment of simple deep learning models.
+  \end{itemize}
+\end{itemize}}
+
+\cventry{August~2017 -- March~2018}{Software engineer}{Unemployed/Self-employed}{Moscow}{}{}
+
+\cventry{October~2015 -- August~2017}{Robotics researcher/developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
 \begin{itemize}
 \item Self-driving car positioning and control software:
   \begin{itemize}
@@ -104,13 +117,12 @@ Control systems development.
 
 \section{Skills}
 \subsection{Main:}
-\cvitem{}{C++ (Eigen, Boost), Python (Jupyter, NumPy, Sklearn, Paramiko), Matlab/Simulink, Git, ROS, Linux, Dynamic systems math
-modelling.}
+\cvitem{}{C++ (Eigen), Python (Jupyter, NumPy, Keras, Sklearn), Git, ROS, Linux, Machine Learning, Computer Vision. }
 \subsection{Experience with:}
-\cvitem{}{Bash, C, OpenCV, JS (Underscore.JS, Backbone.JS, Leaflet.JS), MongoDB, Django, Machine Learning, Computer Vision, Docker, \LaTeX, SciLab, VisSim. }
+\cvitem{}{Bash, C, OpenCV, JS (Underscore.JS, Backbone.JS, Leaflet.JS), MongoDB, Django,  Docker, \LaTeX, Dynamic systems math
+modelling, Matlab/Simulink, SciLab, VisSim. }
 
-\section{Miscellaneous}
 \subsection{Interests}
-\cvitem{}{RC airplanes and quadrotors, skiing, bicycling.}
+\cvitem{}{Space, alpine skiing, cross-country skiing, bicycling.}
 
 \end{document}
