--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -38,8 +38,14 @@
   \begin{itemize}
   \item Sensors diagnostics (ROS, C++, Python, NumPy):
     Simple data quality checking software modules for cameras and LiDARs.
-  \item Traffic lights detection (ROS, Python, NumPy, TensorFlow, Keras).
-    Traffic lights recognition and tracking pipeline; learning data mining and pre-processing; creating, training and deployment of simple deep learning models.
+  \item Traffic lights detection (ROS, C++, Python, NumPy, TensorFlow, Keras).
+    Traffic lights recognition and tracking pipeline; learning data mining and pre-processing; creating, training and deployment of deep learning models.
+  \end{itemize}
+\item Talks about Yandex Self-Driving Car project:
+  \begin{itemize}
+  \item Traffic Lights in Yandex Self-Driving Cars;
+  \item Myths about Self-Driving Cars;
+  \item Data mining in Yandex Self-Driving Cars.
   \end{itemize}
 \end{itemize}}
 
@@ -66,7 +72,7 @@
 \cventry{June~2015 -- October~2015}{Junior web-developer}{WETA Group}{Remote}{}{
 Full-stack web-development
 \begin{itemize}
-\item Security system web-interface development: Two web-application were developed using Django non-rel backend and JS + Backbone.JS + Marionette.JS + Raphaël.JS frontend with MongoDB database;
+\item Security system web-interface development: Two web-applications were developed using Django non-rel backend and JS + Backbone.JS + Marionette.JS + Raphaël.JS frontend with MongoDB database;
 \end{itemize}}
 
 \cventry{July~2013 -- June~2015}{Control systems developer}{Modern Signal Processing and Contol Technologies R\&D Laboratory}{Chelyabinsk}{}{
@@ -80,12 +86,11 @@ Control systems development.
   \end{itemize}
 \item Autonomous car trajectory control system:
   \begin{itemize}
-  \item Participated in car control system structure development;
   \item Control algorithms development and math modelling using MATLAB/Simulink
    and VisSim;
-  \item Algorithms realization (C++, control unit with STM32 and NuttX RTOS);
+  \item Algorithms implementation (C++, control unit with STM32 and NuttX RTOS);
   \item Car control system test bench software development using Python 2.7 with NumPy and UDP;
-  \item Participated in commissioning, HIL and field tests;
+  \item A bit of HIL and field tests;
   \end{itemize}
 \item UAV test bench software: Scilab, interaction with National
  Instruments data acquisition system.
@@ -113,14 +118,14 @@ Control systems development.
 \cvitemwithcomment{Russian}{Native speaker}{}
 \cvitemwithcomment{English}{Intermediate}{}
 \cvitemwithcomment{German}{Beginner}{}
-\cvitemwithcomment{Polish}{Beginner}{}
+\cvitemwithcomment{Tatar}{Beginner}{}
 
 \section{Skills}
 \subsection{Main:}
 \cvitem{}{C++ (Eigen), Python (Jupyter, NumPy, Keras, Sklearn), Git, ROS, Linux, Machine Learning, Computer Vision. }
 \subsection{Experience with:}
-\cvitem{}{Bash, C, OpenCV, JS (Underscore.JS, Backbone.JS, Leaflet.JS), MongoDB, Django,  Docker, \LaTeX, Dynamic systems math
-modelling, Matlab/Simulink, SciLab, VisSim. }
+\cvitem{}{Bash, C, OpenCV, JS (some old frameworks), Django,  Docker, \LaTeX, Dynamic systems math
+modelling, Matlab/Simulink. }
 
 \subsection{Interests}
 \cvitem{}{Space, alpine skiing, cross-country skiing, bicycling.}
