Fix typo in lab name

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -75,7 +75,7 @@ Full-stack web-development
 \item Security system web-interface development: Two web-applications were developed using Django non-rel backend and JS + Backbone.JS + Marionette.JS + Raphaël.JS frontend with MongoDB database;
 \end{itemize}}
 
-\cventry{July~2013 -- June~2015}{Control systems developer}{Modern Signal Processing and Contol Technologies R\&D Laboratory}{Chelyabinsk}{}{
+\cventry{July~2013 -- June~2015}{Control systems developer}{Modern Signal Processing and Control Technologies R\&D Laboratory}{Chelyabinsk}{}{
 Control systems development.
 \begin{itemize}
 \item Turboshaft control system:
