My CV updtate first iteration

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -18,7 +18,7 @@
 
 % personal data
 \name{Yulia}{Yakovleva}
-\title{Software developer}
+\title{Software engineer}
 \address{}{Moscow}{Russian Federation}
 \email{robolamp@ya.ru}
 %\email{redslowj@gmail.com}
@@ -32,16 +32,17 @@
 \section{Experience}
 % \subsection{Vocational}
 
-\cventry{March~2018 -- Now}{Software engineer}{Yandex Self-Driving Car}{Moscow}{}{
+\cventry{March~2018 -- Now}{Software engineer}{Yandex Self-Driving Cars}{Moscow}{}{
 \begin{itemize}
 \item Self-driving car perception software:
   \begin{itemize}
   \item Sensors diagnostics (ROS, C++, Python, NumPy):
-    Simple data quality checking software modules for cameras and LiDARs.
-  \item Traffic lights detection (ROS, C++, Python, NumPy, TensorFlow, Keras).
-    Traffic lights recognition and tracking pipeline; learning data mining and pre-processing; creating, training and deployment of deep learning models.
+    I created simple data quality checking software modules for cameras and LiDARs.
+  \item Traffic lights recognition pipeline (ROS, C++, Python, NumPy, TensorFlow, Keras).
+    Traffic lights recognition and tracking pipeline; learning data mining and pre-processing;
+    creating, training and deployment of deep learning models.
   \end{itemize}
-\item Talks about Yandex Self-Driving Car project:
+\item Talks about Yandex Self-Driving Cars project:
   \begin{itemize}
   \item Traffic Lights in Yandex Self-Driving Cars;
   \item Myths about Self-Driving Cars;
@@ -53,51 +54,59 @@
 
 \cventry{October~2015 -- August~2017}{Robotics researcher/developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
 \begin{itemize}
-\item Self-driving car positioning and control software:
+\item Self-driving car prototype positioning and control software.
+  I created or worked on the following modules:
   \begin{itemize}
-  \item System launch tool to replace ROSLaunch (Python, ROS, Paramiko):
-    Just a more flexible tool than ROSLaunch.
-  \item Local positioning system (C++, Eigen, Kalman filters):
-    Extended Kalman filter and rollbacks/roll-ons to use measurements with various delays.
+  \item System launch tool to replace ROSLaunch (Python, ROS, Paramiko);
+  \item Local positioning system (C++, Eigen, Kalman filters);
   \item Trajectory control system (C++, ROS);
-  \item Developers' web-interface (Python, JS (Leaflet.JS, Bootstrap),  ROS):
-    Interactive tool that allows to correct positioning and control route passing.
-  \item Road markup-relied localization system (C++, ROS):
-    A system that uses recognized road markup and road features map for positioning.
-  \item Field testing;
+  \item Developers' web-interface (Python, JS (Leaflet.JS, Bootstrap),  ROS);
+  \item Road markup-relied localization system (C++, ROS).
   \end{itemize}
+%  \begin{itemize}
+%  \item System launch tool to replace ROSLaunch (Python, ROS, Paramiko):
+%    Just a more flexible tool than ROSLaunch.
+%  \item Local positioning system (C++, Eigen, Kalman filters):
+%    Extended Kalman filter and rollbacks/roll-ons to use measurements with various delays.
+%  \item Trajectory control system (C++, ROS);
+%  \item Developers' web-interface (Python, JS (Leaflet.JS, Bootstrap),  ROS):
+%    Interactive tool that allows to correct positioning and control route passing.
+%  \item Road markup-relied localization system (C++, ROS):
+%    A system that uses recognized road markup and road features map for positioning.
+%  \item Field testing;
+%  \end{itemize}
 \item Initiative works in deep learning for robotics control (just for fun).
 \end{itemize}}
 
 \cventry{June~2015 -- October~2015}{Junior web-developer}{WETA Group}{Remote}{}{
 Full-stack web-development
 \begin{itemize}
-\item Security system web-interface development: Two web-applications were developed using Django non-rel backend and JS + Backbone.JS + Marionette.JS + Raphaël.JS frontend with MongoDB database;
+\item Information security system web-interface: \newline
+  I developed two web-applications using Django non-rel backend and JS + some outdated frameworks frontend with MongoDB database;
 \end{itemize}}
 
 \cventry{July~2013 -- June~2015}{Control systems developer}{Modern Signal Processing and Control Technologies R\&D Laboratory}{Chelyabinsk}{}{
 Control systems development.
 \begin{itemize}
-\item Turboshaft control system:
+\item Turboshaft engine control system development:
   \begin{itemize}
-  \item Turboshaft math modelling using MATLAB/Simulink;
-  \item Design, assembling and commissioning of turboshaft control system
-  control cabinets;
+  \item I performed Turboshaft math modelling using MATLAB/Simulink,
+  \item participated in design, test stands assembling and commissioning of the control system;
   \end{itemize}
-\item Autonomous car trajectory control system:
+\item Self-driving car prototype trajectory control system:
   \begin{itemize}
-  \item Control algorithms development and math modelling using MATLAB/Simulink
-   and VisSim;
-  \item Algorithms implementation (C++, control unit with STM32 and NuttX RTOS);
-  \item Car control system test bench software development using Python 2.7 with NumPy and UDP;
-  \item A bit of HIL and field tests;
+  \item I proposed control algorithms and performed math modelling using MATLAB/Simulink,
+  \item implemented these Algorithms (C++, control unit with STM32 and NuttX RTOS),
+  \item performed HIL testing using Python and NumPy and participated in field tests.
   \end{itemize}
-\item UAV test bench software: Scilab, interaction with National
+\item I developed UAV test stand software: Scilab, interaction with National
  Instruments data acquisition system.
 \end{itemize}}
 
 \cventry{January~2012 -- June~2015}{Laboratory assistant}{South Ural State
- University}{Chelyabinsk}{}{Participated in research works.}
+ University}{Chelyabinsk}{}{Control systems research.}
+
+\section{Talks}
 
 \section{Education}
 \cvitem{2010--2015}{
@@ -124,7 +133,7 @@ Control systems development.
 \subsection{Main:}
 \cvitem{}{C++ (Eigen), Python (Jupyter, NumPy, Keras, Sklearn), Git, ROS, Linux, Machine Learning, Computer Vision. }
 \subsection{Experience with:}
-\cvitem{}{Bash, C, OpenCV, JS (some old frameworks), Django,  Docker, \LaTeX, Dynamic systems math
+\cvitem{}{Bash, C, OpenCV, JS (some outdated frameworks), Django,  Docker, \LaTeX, Dynamic systems math
 modelling, Matlab/Simulink. }
 
 \subsection{Interests}
