--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -42,12 +42,6 @@
     Traffic lights recognition and tracking pipeline; learning data mining and pre-processing;
     creating, training and deployment of deep learning models.
   \end{itemize}
-\item Talks about Yandex Self-Driving Cars project:
-  \begin{itemize}
-  \item Traffic Lights in Yandex Self-Driving Cars;
-  \item Myths about Self-Driving Cars;
-  \item Data mining in Yandex Self-Driving Cars.
-  \end{itemize}
 \end{itemize}}
 
 \cventry{August~2017 -- March~2018}{Software engineer}{Unemployed/Self-employed}{Moscow}{}{}
@@ -107,6 +101,15 @@ Control systems development.
  University}{Chelyabinsk}{}{Control systems research.}
 
 \section{Talks}
+\cventry{}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow, PyLadies Kazan}{}{}{
+A short talk in Russian about the difficulties of traffic lights recognition and
+about Yandex Self-Driving Cars traffic lights recognition pipeline. \newline}
+\cventry{}{Myths about Self-Driving Cars}{Presented at WTM Moscow}{}{}{
+An interactive talk in Russian about self-driving cars architecture,
+sensors and testing. \newline}
+\cventry{}{Data mining in Yandex Self-Driving Cars}{Presented at Pytup Moscow}{}{}{
+A short talk in Russian about data processing pipeline in
+Yandex Self-Driving Cars project. \newline}
 
 \section{Education}
 \cvitem{2010--2015}{
