CV: final draft

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -34,13 +34,14 @@
 
 \cventry{March~2018 -- Now}{Software engineer}{Yandex Self-Driving Cars}{Moscow}{}{
 \begin{itemize}
-\item Self-driving car perception software:
+\item Sensor diagnostics software (ROS, C++, Python, NumPy):
+  I created simple data quality checking software modules for cameras and LiDARs.
+\item Traffic lights recognition software (ROS, C++, Python, NumPy, TensorFlow, Keras).
   \begin{itemize}
-  \item Sensors diagnostics (ROS, C++, Python, NumPy):
-    I created simple data quality checking software modules for cameras and LiDARs.
-  \item Traffic lights recognition pipeline (ROS, C++, Python, NumPy, TensorFlow, Keras).
-    Traffic lights recognition and tracking pipeline; learning data mining and pre-processing;
-    creating, training and deployment of deep learning models.
+  \item I worked on improvement of traffic lights recognition and tracking pipeline,
+  \item learning data mining, pre-processing and datasets preparation,
+  \item created, learned and deployed multiple iterations of deep neural networks,
+  which are working now at hundreds of self-driving cars made by Yandex.
   \end{itemize}
 \end{itemize}}
 
@@ -57,18 +58,6 @@
   \item Developers' web-interface (Python, JS (Leaflet.JS, Bootstrap),  ROS);
   \item Road markup-relied localization system (C++, ROS).
   \end{itemize}
-%  \begin{itemize}
-%  \item System launch tool to replace ROSLaunch (Python, ROS, Paramiko):
-%    Just a more flexible tool than ROSLaunch.
-%  \item Local positioning system (C++, Eigen, Kalman filters):
-%    Extended Kalman filter and rollbacks/roll-ons to use measurements with various delays.
-%  \item Trajectory control system (C++, ROS);
-%  \item Developers' web-interface (Python, JS (Leaflet.JS, Bootstrap),  ROS):
-%    Interactive tool that allows to correct positioning and control route passing.
-%  \item Road markup-relied localization system (C++, ROS):
-%    A system that uses recognized road markup and road features map for positioning.
-%  \item Field testing;
-%  \end{itemize}
 \item Initiative works in deep learning for robotics control (just for fun).
 \end{itemize}}
 
