--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -23,6 +23,7 @@
 \email{robolamp@ya.ru}
 %\email{redslowj@gmail.com}
 \social[github]{robolamp}
+\extrainfo{\url{github.com/robolamp/about_robolamp}}
 \extrainfo{\url{kotobank.ch/~robolamp/}}
 
 
@@ -30,7 +31,6 @@
 \makecvtitle
 
 \section{Experience}
-% \subsection{Vocational}
 
 \cventry{March~2018 -- Now}{Software engineer}{Yandex Self-Driving Cars}{Moscow}{}{
 \begin{itemize}
@@ -90,7 +90,7 @@ Control systems development.
  University}{Chelyabinsk}{}{Control systems research.}
 
 \section{Talks}
-\cventry{}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow, PyLadies Kazan}{}{}{
+\cventry{}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow and PyLadies Kazan}{}{}{
 A short talk in Russian about the difficulties of traffic lights recognition and
 about Yandex Self-Driving Cars traffic lights recognition pipeline. \newline}
 \cventry{}{Myths about Self-Driving Cars}{Presented at WTM Moscow}{}{}{
@@ -128,7 +128,18 @@ Yandex Self-Driving Cars project. \newline}
 \cvitem{}{Bash, C, OpenCV, JS (some outdated frameworks), Django,  Docker, \LaTeX, Dynamic systems math
 modelling, Matlab/Simulink. }
 
-\subsection{Interests}
+\section{Pet projects}
+\cventry{}{rTerm}{\url{github.com/robolamp/rTerm}}{}{}{
+Fake JS-based UNIX term for my personal page.
+\newline}
+
+\cventry{}{Random three body problem bot}{\url{github.com/robolamp/3_body_problem_bot}}{}{}{
+A program which is simulating the behavior of random three body system
+multiple times and publishing animation of the most interesting one every
+12 hours at \href{t.me/random_three_body_problem}{Telegram channel}.
+\newline}
+
+\section{Interests}
 \cvitem{}{Space, alpine skiing, cross-country skiing, bicycling.}
 
 \end{document}
