CV: small mistakes removed

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -40,7 +40,7 @@
   \item I worked on improvement of traffic lights recognition and tracking pipeline,
   \item learning data mining, pre-processing and datasets preparation,
   \item created, learned and deployed multiple iterations of deep neural networks,
-  which are working now at hundreds of self-driving cars made by Yandex.
+  which are working now on hundreds of self-driving cars made by Yandex.
   \end{itemize}
 \end{itemize}}
 
@@ -67,12 +67,12 @@ Full-stack web-development
   I developed two web-applications using Django non-rel backend and JS + some outdated frameworks frontend with MongoDB database;
 \end{itemize}}
 
-\cventry{July~2013 -- June~2015}{Control systems developer}{Modern Signal Processing and Control Technologies R\&D Laboratory}{Chelyabinsk}{}{
+\cventry{July~2013 -- June~2015}{Junior control systems developer}{Modern Signal Processing and Control Technologies R\&D Laboratory}{Chelyabinsk}{}{
 \begin{itemize}
 \item Turboshaft engine control system development:
   \begin{itemize}
   \item I performed Turboshaft math modelling using MATLAB/Simulink,
-  \item participated in design, test stands assembling and commissioning of the control system;
+  \item participated in control system design, test stands assembling and commissioning;
   \end{itemize}
 \item Self-driving car prototype trajectory control system:
   \begin{itemize}
