--- a/my_cv_full_eng.tex
+++ b/my_cv_full_eng.tex
@@ -43,6 +43,8 @@
   \end{itemize}
 \end{itemize}}
 
+\cventry{August~2017 -- March~2018}{Software engineer}{Unemployed/Self-employed}{Moscow}{}{}
+
 \cventry{October~2015 -- August~2017}{Robotics researcher/developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
 \begin{itemize}
 \item Self-driving car prototype positioning and control software.
@@ -80,6 +82,9 @@ Full-stack web-development
 \item I developed UAV test stand software: Scilab, interaction with National
  Instruments data acquisition system.
 \end{itemize}}
+
+\cventry{September~2012 -- June~2015}{Laboratory assistant}{South Ural State
+ University}{Chelyabinsk}{}{Control systems research.}
 
 \section{Talks}
 \cventry{}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow and PyLadies Kazan}{}{}{
