--- a/my_cv_full_eng.tex
+++ b/my_cv_full_eng.tex
@@ -30,7 +30,7 @@
 
 \section{Experience}
 
-\cventry{March~2018 -- Now}{Software engineer}{Yandex Self-Driving Cars}{Moscow}{}{
+\cventry{March~2018 -- May~2021}{Software engineer}{Yandex Self-Driving Cars}{Moscow}{}{
 \begin{itemize}
 \item Sensor diagnostics software (ROS, C++, Python, NumPy):
   I created data quality checking software modules for cameras and LiDARs.
