Add: actual info about volunteering and stuff

--- a/my_cv_full_eng.tex
+++ b/my_cv_full_eng.tex
@@ -30,6 +30,20 @@
 
 \section{Experience}
 
+\cventry{November~2021 -- Now}{Machine learning engineer}{Descriptor.ai}{Remote/Moscow}{}{
+\begin{itemize}
+    \item Sound data processing with deep learning models (Python, NumPy, TensorFlow, Keras, Sound data).
+\end{itemize}}
+
+\cventry{July~2021 -- October~2021}{Machine learning engineer}{MediaZona}{Remote/Moscow}{}{
+\begin{itemize}
+    \item AI Text Generation (NLP, Python, NumPy, TensorFlow, Keras, Transformers, GPT):
+      I worked on conditional text generation with neural networks.
+      My responsibilities included both engineering/coding and interaction with non-tech employees of MediaZona on translating their 
+      non-tech requirements into "tech language", finding the data and getting a feedback on text generators' work.
+\end{itemize}}
+
+
 \cventry{March~2018 -- May~2021}{Software engineer}{Yandex Self-Driving Cars}{Moscow}{}{
 \begin{itemize}
 \item Sensor diagnostics software (ROS, C++, Python, NumPy):
@@ -96,6 +110,12 @@ sensors and testing. \newline}
 \cventry{}{Data mining in Yandex Self-Driving Cars}{Presented at Pytup Moscow}{}{}{
 A short talk in Russian about data processing pipeline in
 Yandex Self-Driving Cars project. \newline}
+
+\section{Volunteering}
+\cventry{May~2020 -- now}{Web developer/data analyst}{OVD-Info}{Remote/Moscow}{}{
+  OVD-Info if an independent human rights media project.
+  I'm participating in development of information collection and analysis system for OVD-Info using SQL, Python and Django.
+}
 
 \section{Education}
 \cvitem{2010--2015}{
