add: short version of my CV is really short now

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -10,10 +10,10 @@
 \usepackage[utf8]{inputenc}
 
 % adjust the page margins
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.80]{geometry}
 % \setlength{\hintscolumnwidth}{3cm}.
 
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.80]{geometry}
 \setlength{\hintscolumnwidth}{3cm}
 
 % personal data
@@ -57,59 +57,66 @@
 \end{itemize}}
 
 \cventry{October~2015 -- August~2017}{Robotics researcher/developer}{Institute for Information Transmission Problems RAS (Kharkevich Institute)}{Moscow}{}{
-\begin{itemize}
-\item Self-driving car prototype positioning and control software.
-  I created or worked on the following modules:
-  \begin{itemize}
-  \item System launch tool to replace ROSLaunch (Python, ROS, Paramiko);
-  \item Local positioning system (C++, Eigen, Kalman filters);
-  \item Trajectory control system (C++, ROS);
-  \item Developers' web-interface (Python, JS (Leaflet.JS, Bootstrap),  ROS);
-  \item Road markup-relied localization system (C++, ROS).
-  \end{itemize}
-\item Initiative works in deep learning for robotics control (just for fun).
-\end{itemize}}
+  I worked on self-driving car prototype positioning and control software including: system launch tool to replace ROSLaunch, positioning and control systems (C++, Python, ROS,  Eigen, Computer Vision, Kalman filters).
+% \begin{itemize}
+% \item Self-driving car prototype positioning and control software.
+  % I created or worked on the following modules:
+  % \begin{itemize}
+  % \item System launch tool to replace ROSLaunch (Python, ROS, Paramiko);
+  % \item Local positioning system (C++, Eigen, Kalman filters);
+  % \item Trajectory control system (C++, ROS);
+  % \item Developers' web-interface (Python, JS (Leaflet.JS, Bootstrap),  ROS);
+  % \item Road markup-relied localization system (C++, ROS).
+  % \end{itemize}
+% \item Initiative works in deep learning for robotics control (just for fun).
+% \end{itemize}
+}
 
 \cventry{June~2015 -- October~2015}{Junior web-developer}{WETA Group}{Remote}{}{
 Full-stack web-development
-\begin{itemize}
-\item Information security system web-interface: \newline
-  I developed two web-applications using Django non-rel backend and JS frontend with MongoDB database;
-\end{itemize}}
+% \begin{itemize}
+% \item Information security system web-interface: \newline
+%   I developed two web-applications using Django non-rel backend and JS frontend with MongoDB database;
+% \end{itemize}
+}
 
 \cventry{July~2013 -- June~2015}{Junior control systems developer}{Modern Signal Processing and Control Technologies R\&D Laboratory}{Chelyabinsk}{}{
-\begin{itemize}
-\item Turboshaft engine control system development:
-  \begin{itemize}
-  \item I performed Turboshaft math modelling using MATLAB/Simulink,
-  \item participated in control system design, test stands assembling and commissioning;
-  \end{itemize}
-\item Self-driving car prototype trajectory control system:
-  \begin{itemize}
-  \item I proposed control algorithms and performed math modelling using MATLAB/Simulink,
-  \item implemented these Algorithms (C++, control unit with STM32 and NuttX RTOS),
-  \item performed HIL testing using Python and NumPy and participated in field tests.
-  \end{itemize}
-\item I developed UAV test stand software: Scilab, interaction with National
- Instruments data acquisition system.
-\end{itemize}}
-
-\section{Talks}
-\cventry{}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow and PyLadies Kazan}{}{}{
-A short talk in Russian about the difficulties of traffic lights recognition and
-about Yandex Self-Driving Cars traffic lights recognition pipeline. \newline}
-\cventry{}{Myths about Self-Driving Cars}{Presented at WTM Moscow}{}{}{
-An interactive talk in Russian about self-driving cars architecture,
-sensors and testing. \newline}
-\cventry{}{Data mining in Yandex Self-Driving Cars}{Presented at Pytup Moscow}{}{}{
-A short talk in Russian about data processing pipeline in
-Yandex Self-Driving Cars project. \newline}
+% \begin{itemize}
+% \item Turboshaft engine control system development:
+%   \begin{itemize}
+%   \item I performed Turboshaft math modelling using MATLAB/Simulink,
+%   \item participated in control system design, test stands assembling and commissioning;
+%   \end{itemize}
+% \item Self-driving car prototype trajectory control system:
+%   \begin{itemize}
+%   \item I proposed control algorithms and performed math modelling using MATLAB/Simulink,
+%   \item implemented these Algorithms (C++, control unit with STM32 and NuttX RTOS),
+%   \item performed HIL testing using Python and NumPy and participated in field tests.
+%   \end{itemize}
+% \item I developed UAV test stand software: Scilab, interaction with National
+%  Instruments data acquisition system.
+% \end{itemize}
+}
 
 \section{Volunteering}
 \cventry{May~2020 -- now}{Web developer/data analyst}{OVD-Info}{Remote/Moscow}{}{
   OVD-Info if an independent human rights media project.
   I'm participating in development of information collection and analysis system for OVD-Info using SQL, Python and Django.
 }
+
+\section{Talks}
+\cventry{}{Traffic Lights in Yandex Self-Driving Cars}{Presented at Yandex Self-Driving Meetup 2019, PyLadies Moscow and PyLadies Kazan}{}{}{}
+% A short talk in Russian about the difficulties of traffic lights recognition and
+% about Yandex Self-Driving Cars traffic lights recognition pipeline. \newline
+% }
+\cventry{}{Myths about Self-Driving Cars}{Presented at WTM Moscow}{}{}{}
+% An interactive talk in Russian about self-driving cars architecture,
+% sensors and testing. \newline
+% }
+\cventry{}{Data mining in Yandex Self-Driving Cars}{Presented at Pytup Moscow}{}{}{}
+% A short talk in Russian about data processing pipeline in
+% Yandex Self-Driving Cars project. \newline
+% }
 
 \section{Education}
 \cvitem{2010--2015}{
@@ -150,7 +157,7 @@ multiple times and publishing animation of the most interesting one every
 12 hours at \href{t.me/random_three_body_problem}{Telegram channel}.
 \newline}
 
-\section{Interests}
-\cvitem{}{Space, alpine skiing, cross-country skiing, bicycling.}
+% \section{Interests}
+% \cvitem{}{Space, alpine skiing, cross-country skiing, bicycling.}
 
 \end{document}
