fix: fix typo in OVD-info and English level update

--- a/my_cv_full_eng.tex
+++ b/my_cv_full_eng.tex
@@ -113,7 +113,7 @@ Yandex Self-Driving Cars project. \newline}
 
 \section{Volunteering}
 \cventry{May~2020 -- now}{Web developer/data analyst}{OVD-Info}{Remote/Moscow}{}{
-  OVD-Info if an independent human rights media project.
+  OVD-Info is an independent human rights media project.
   I'm participating in development of information collection and analysis system for OVD-Info using SQL, Python and Django.
 }
 
@@ -134,7 +134,7 @@ Yandex Self-Driving Cars project. \newline}
 
 \section{Languages}
 \cvitemwithcomment{Russian}{Native speaker}{}
-\cvitemwithcomment{English}{Intermediate}{}
+\cvitemwithcomment{English}{Fluent}{}
 \cvitemwithcomment{German}{Beginner}{}
 \cvitemwithcomment{Tatar}{Beginner}{}
 
