--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -100,7 +100,7 @@ Full-stack web-development
 
 \section{Volunteering}
 \cventry{May~2020 -- now}{Web developer/data analyst}{OVD-Info}{Remote/Moscow}{}{
-  OVD-Info if an independent human rights media project.
+  OVD-Info is an independent human rights media project.
   I'm participating in development of information collection and analysis system for OVD-Info using SQL, Python and Django.
 }
 
@@ -135,7 +135,7 @@ Full-stack web-development
 
 \section{Languages}
 \cvitemwithcomment{Russian}{Native speaker}{}
-\cvitemwithcomment{English}{Intermediate}{}
+\cvitemwithcomment{English}{Fluent}{}
 \cvitemwithcomment{German}{Beginner}{}
 \cvitemwithcomment{Tatar}{Beginner}{}
 
