Another CV update

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -19,7 +19,7 @@
 % personal data
 \name{Yulia}{Yakovleva}
 \title{Software engineer}
-\address{}{Moscow}{Russian Federation}
+\address{}{Warsaw}{Poland}
 \email{robolamp@ya.ru}
 \social[github]{robolamp}
 \extrainfo{\url{kotobank.ch/~robolamp/}}
@@ -30,9 +30,14 @@
 
 \section{Experience}
 
-\cventry{November~2021 -- Now}{Machine learning engineer}{Descriptor.ai}{Remote/Moscow}{}{
+\cventry{March~2022 -- Now}{Machine learning engineer}{Rainbow.ai}{Warsaw}{}{
 \begin{itemize}
-    \item Sound data processing with deep learning models (Python, NumPy, TensorFlow, Keras, Sound data).
+    \item Weather prediction using deep learning models (Python, PyTorch, Image processing, Weather data)
+\end{itemize}}
+
+\cventry{November~2021 -- February~2022}{Machine learning engineer}{Descriptor.ai}{Remote/Moscow}{}{
+\begin{itemize}
+    \item I created a few good-performing voice sentiment analysis models (Python, NumPy, TensorFlow, Keras, Voice data).
 \end{itemize}}
 
 \cventry{July~2021 -- October~2021}{Machine learning engineer}{MediaZona}{Remote/Moscow}{}{
