Add: e-mail at CV update

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -20,7 +20,8 @@
 \name{Yulia}{Yakovleva}
 \title{Software engineer}
 \address{}{Warsaw}{Poland}
-\email{robolamp@ya.ru}
+% \email{robolamp@ya.ru}
+\email{redslowj@gmail.com} 
 \social[github]{robolamp}
 \extrainfo{\url{kotobank.ch/~robolamp/}}
 
