Linkedin link added

--- a/my_cv_eng.tex
+++ b/my_cv_eng.tex
@@ -23,7 +23,8 @@
 % \email{robolamp@ya.ru}
 \email{redslowj@gmail.com} 
 \social[github]{robolamp}
-\extrainfo{\url{kotobank.ch/~robolamp/}}
+\social[linkedin][https://www.linkedin.com/in/yulia-yakovleva-633505100/]{Yulia Yakovleva}
+% \extrainfo{\url{kotobank.ch/~robolamp/}}
 
 
 \begin{document}
